fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 60rem;
+  width: 1000px;
   top: 0;
   bottom: 0;
   margin: 0 auto;
